a test commit and PR
Signed-off-by: Howard Pritchard <howardp@lanl.gov>

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,8 @@ Additional copyrights may follow
 
 $HEADER$
 
+exicting new stuff
+
 ===========================================================================
 
 This file contains the main features as well as overviews of specific
